# LiteWing

./: .gitignore  MS5611_Integration_Log.md  drone_output_log_20251105_122904.txt  packet_log.txt  sdkconfig
Python-Scripts/: Plot_View.py  dead-reckoning-joystick-control.py  dead-reckoning-maneuvers-v1.0.py  dead-reckoning-optical-position-hold.py  dead-reckoning-position-hold-v2.0.py  flight_with_neopixel_test.py  ground_pattern.py  neopixel_control.py
Python-Scripts/Flight_Stabilizer_Shield/: dead-reckoning-joystick-control.py  dead-reckoning-joystick-position-hold.py  dead-reckoning-maneuvers-guide.md  dead-reckoning-maneuvers-v1.0.py  dead-reckoning-maneuvers.py  dead-reckoning-optical-position-hold.py  flight_session_fixes.md  test_baro_imu.py  test_height_sensor.py  test_imu.py  test_neopixel.py  test_optical_flow.py  test_optical_flow_sensor.py
Python-Scripts/Flight_Stabilizer_Shield/Doc/: LiteWing Flight Stabilizer Shield - Optical Position Hold.md
Python-Scripts/Flight_Stabilizer_Shield/Scripts/: LiteWing_Flight_Positioning_Module.py  combined_sensor_test.py  dead-reckoning-optical-position-hold.py  ms5611.py  test_baro_sensor.py  (+1 more)
Python-Scripts/Flight_Stabilizer_Shield/litewing/: config.py  pyproject.toml
Python-Scripts/Flight_Stabilizer_Shield/litewing/examples/: tier1_first_flight.py  tier2_sensors_and_control.py  tier3_pid_and_waypoints.py
Python-Scripts/Scripts/: dead-reckoning-position-hold-v2.0.py  hellow_litewing.py  neopixel.py
Python-Scripts/litewing-library/: QUICK_REFERENCE.md  README.md  install.bat  install.sh  pyproject.toml
(+49 files in other folders)
