[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "litewing"
version = "0.1.0"
description = "Beginner-friendly Python library for LiteWing drone control"
requires-python = ">=3.8"
dependencies = [
    "cflib",
]

[project.optional-dependencies]
dev = ["pytest"]
